Add timed return obj, more exercises TODO: polish